6.29
    - Now honors PERL_CORE environment variable.
    - Testing to ensure FIRST_MAKEFILE is honored.

6.28  Tue Apr 12 16:17:07 PDT 2005
    - Fix realclean so it cleans up files installed from ext/ in the core
    - Fix dir_target() so it doesn't warn should any of the INST_* paths
      be the same (as with the ext/ modules in the core)
    - Fix MANIFEST.SKIP so it skips not just _darcs/ but everything inside
      it and any which happen to be in subdirs.
    - MM_AIX forgot to import neatvalue() from E::MakeMaker. 
      (bleadperl@24185)
    - Fixed a minor C<<>> POD nit (Scott Lanning)

6.27  Mon Apr  4 16:36:14 PDT 2005
    * Added _darcs to the list of revision control administrative 
      directories skipped both in libscan and in MANIFEST.SKIP.

6.26_01 Mon Mar 28 21:34:39 PST 2005
    * PL_FILES was broken in the last release.  The .PL files were not being
      passed the file they were to generate.
    * How PL_FILES runs the programs and what it does with the value is 
      now documented.
    * The default behavior of PL_FILES is now documented.

6.26  Mon Mar 21 20:36:22 PST 2005

6.25_12 Fri Mar 18 16:15:35 PST 2005
    - Use the generic dmake search.cpan.org URL in the README so the newest
      version is found.
    - Fixed pm_to_blib trouble on VMS introduced in 6.25_10.

6.25_11 Tue Mar 15 02:00:20 PST 2005
    - Fixed minor parent class dependency loop in ExtUtils::MM_Any.
    - Fixed a circular dependency on processed PL files introduced as part
      of RT 6460 in 6.25_02.

6.25_10 Sun Mar 13 16:14:04 PST 2005
    - pm_to_blib.ts is gone, back to pm_to_blib (except on VMS).  I 
      couldn't make it work and still retain backwards compatibility.
      This fixes the recompilation problems that plagued _09 and various
      previous alpha releases.

6.25_09  Sat Mar 12 10:10:34 PST 2005
    - Stubbing out PASTHRU on VMS.  $(MMSQUALIFIERS) should do the equivalent
      and better.