@@ -1,4 +1,8 @@
 6.29
+    * The behavior of PL_FILES is restored to its pre-6.26 behavior as several
+      CPAN modules depend on this.  PL programs run via PL_FILES have 
+      INST_LIB and INST_ARCH in their @INC and so can load any just built 
+      modules.
     - Now honors PERL_CORE environment variable.
     - Testing to ensure FIRST_MAKEFILE is honored.
 
